--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,43 @@
-# Ignore all .log files
-    *.log
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+package-lock.json
+yarn.lock
+.env
 
-    # Ignore the 'node_modules' directory
-    node_modules/
+# Logs
+logs
+*.log
+*.log.*
+log.txt
+debug.log
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# IDE/editor folders
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Testing
+coverage/
+.nyc_output/
+
+# Build output
+dist/
+build/
+tmp/
+temp/
+.cache/
+*.tsbuildinfo
+
+# Misc
+*.local
+.env.local
+.env.*.local
