--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.11.0",
     "multer": "^2.0.0",
+    "react-bootstrap": "^2.10.10",
     "sass": "^1.90.0",
     "shadcn": "^2.10.0"
   },
@@ -36,6 +37,7 @@
     "autoprefixer": "^10.4.21",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
+    "sass-embedded": "^1.90.0",
     "tailwindcss": "^4.1.12"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
