--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "mongoose": "^8.11.0",
     "multer": "^2.0.0",
     "react-bootstrap": "^2.10.10",
