--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
