--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
-    "jwt-decode": "^4.0.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -34,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.6",
+    "sass-embedded": "^1.90.0",
     "tailwindcss": "^4.1.12",
     "vite": "^6.2.0"
   }
