--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.6",
     "sass-embedded": "^1.90.0",
+    "sass": "^1.90.0",
     "tailwindcss": "^4.1.12",
     "vite": "^6.2.0"
   }
